[package]
name = "hpke-rs"
version = "0.2.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
documentation = "https://docs.rs/hpke-rs"
description = "HPKE Implementation"
readme = "Readme.md"
repository = "https://github.com/franziskuskiefer/hpke-rs"
resolver = "2"

[dependencies]
log = "0.4"
zeroize = { version = "1.5", features = ["derive"] }
hpke-rs-crypto = { version = "0.2", path = "./traits" }

serde = { version = "1.0", features = ["derive"], optional = true }
tls_codec = { version = "0.2", features = ["derive"], optional = true }

[features]
default = []
serialization = [
    "dep:serde",
    "dep:tls_codec",
    "hpke-rs-crypto/serialization",
    "tls_codec?/serde"
]
hazmat = []
hpke-test = []
hpke-test-prng = [] # ⚠️ Enable testing PRNG - DO NOT USE

[dev-dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
rayon = "1.6"
hpke-rs = { path = ".", features = ["hpke-test", "hazmat"] }
hpke-rs-rust-crypto = { version = "0.2", path = "./rust_crypto_provider", features = ["deterministic-prng"] }
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
pretty_env_logger = "0.4"
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "manual_benches"
harness = false
