[package]
name = "hpke-rs-rust-crypto"
version = "0.2.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
documentation = "https://docs.rs/hpke-rs-rust-crypto"
description = "Crypto backend for HPKE using native Rust crypto."
readme = "Readme.md"
repository = "https://github.com/franziskuskiefer/hpke-rs"

[dependencies]
hpke-rs-crypto = { version = "0.2", path = "../traits" }
# Rust crypto
elliptic-curve = { version = "0.12", features = ["ecdh"] }
hkdf = "0.12"
sha2 = "0.10"
p256 = "0.12"
p384 = "0.12"
x25519-dalek-ng = "1.1"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
zeroize = "1.5"
# Randomness
rand_core = { version = "0.6", features = ["getrandom"] }
rand_chacha = "0.3"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[features]
deterministic-prng = [] # ⚠️ FOR TESTING ONLY.

[[bench]]
name = "bench_hkdf"
harness = false

[[bench]]
name = "bench_p256"
harness = false

[[bench]]
name = "bench_x25519"
harness = false
